fixed footer overlap on account page

--- a/bettercrative/static/main.css
+++ b/bettercrative/static/main.css
@@ -23,6 +23,7 @@ footer {
 .wrapper{
   margin-top:5vw;
   width:100%;
+  overflow: auto;
 }
 
 section {
